--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,25 @@
 body {
+  background: #1e1f24;
   color: #333;
-  text-align: left;
+  text-align: center;
   font-family: Arial;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
 
 #cabecera {
-  background: #33A;
-  box-shadow: 0px 2px 30px 0px rgba(0,0,0,0.75);
+  background: #37488b;
+  box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
   color: white;
   font-weight: bold;
   margin: 0;
   padding: 0.5em;
+}
+
+#cabecera #logo {
+  width: 20px;
+  vertical-align: middle;
 }
 
 
@@ -32,9 +41,10 @@ body {
 
 #container h1
 {
-  font-size: 20 px;
+  font-size: 20px;
 }
 
 #post {
-
+  background: white;
+  padding: 1em;
 }
