--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
   background: #1e1f24;
-  color: white;
+  color: ##1e1f24;
   text-align: center;
   font-family: Arial;
   font-size: 16px;
@@ -30,6 +30,7 @@ body {
 }
 
 #container {
+  background-color: white;
   width: 70%;
   padding: 0;
   text-align: left;
